--- a/html_files/form.html
+++ b/html_files/form.html
@@ -173,41 +173,60 @@
             <button type="submit">Publish</button>
         </form>
 
-        <!-- <hr>
+        <hr> 
         
-        Add Node Popup Button
-        <button id="showAddNodePopup" style="background:#4fc3f7;color:#222;border:none;border-radius:6px;padding:7px 18px;font-size:1em;cursor:pointer;margin-top:6px;margin-bottom:6px;font-weight:500;">Add Node</button>
-        <div id="addNodePopup" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(0,0,0,0.5);z-index:1000;align-items:center;justify-content:center;">
-            <div style="background:none;padding:0;border-radius:0;box-shadow:none;max-width:none;width:auto;position:relative;">
-                <button onclick="closeAddNodePopup()" style="position:absolute;top:8px;right:12px;background:none;border:none;color:#fff;font-size:1.5em;cursor:pointer;">&times;</button>
-                <iframe id="addNodeIframe" style="width:100%;height:520px;border:none;background:none;"></iframe>
-            </div>
+        <!-- Text element for upload response -->
+        <div id="uploadResponse" style="color: #fff; margin-bottom: 10px; text-align: center; font-size: 1em;">
+            <!-- Empty by default -->
         </div>
-        <script>
-        document.getElementById('showAddNodePopup').onclick = function() {
-            document.getElementById('addNodePopup').style.display = 'flex';
-            // Dynamically load the form from the backend
-            document.getElementById('addNodeIframe').src = '/addNodeForm';
-        };
-        function closeAddNodePopup() {
-            document.getElementById('addNodePopup').style.display = 'none';
-            document.getElementById('addNodeIframe').src = '';
-        }
-        </script> -->
+
+        <!-- Form to upload an agent class file -->
+        <h3>Upload Agent Class File</h3>
+        <form action="/uploadAgent" method="post" enctype="multipart/form-data" id="agentUploadForm" onsubmit="handleUploadResponse(event)">
+            <div class="file-input-wrapper">
+                <input type="file" id="agentFile" name="agentFile" accept=".java" required>
+                <label for="agentFile" class="file-input-label">Choose Agent Class File</label>
+                <span class="file-name" id="agent-file-name">No file chosen</span>
+            </div>
+            <button type="submit">Upload</button>
+        </form>
     </div>
     <script>
-    document.querySelector('form[action="http://localhost:80/upload"]').addEventListener('submit', function(e) {
-        // console.log('Upload form submitted');
-        setTimeout(function() {
-            var frame = parent.frames['outputFrame'];
-            if (frame) {
-                // console.log('outputFrame found, sending GET request to /publish');
-                frame.location.href = 'http://localhost:80/publish';
-            } else {
-                // console.error('outputFrame not found');
-            }
-        }, 100);
-    });
+    function handleUploadResponse(event) {
+        event.preventDefault(); // Prevent default form submission
+        const formData = new FormData(event.target);
+
+        fetch('/uploadAgent', {
+            method: 'POST',
+            body: formData
+        }).then(response => response.text()) // Expect HTML response
+          .then(html => {
+              showPopup(html); // Display HTML response in popup
+          }).catch(error => {
+              showPopup('<p>Error occurred during upload</p>');
+          });
+    }
+
+    function showPopup(htmlContent) {
+        const popup = document.createElement('div');
+        popup.innerHTML = `
+            <span style="position: absolute; top: 5px; right: 10px; cursor: pointer; font-size: 1.2em; color: #4fc3f7;" onclick="this.parentElement.remove()">&times;</span>
+            <div style="margin: 0; color: #bbb; font-size: 1em;">${htmlContent}</div>
+        `;
+        popup.style.position = 'fixed';
+        popup.style.top = '50%';
+        popup.style.left = '50%';
+        popup.style.transform = 'translate(-50%, -50%)';
+        popup.style.background = '#333';
+        popup.style.padding = '20px';
+        popup.style.borderRadius = '18px';
+        popup.style.boxShadow = '0 4px 24px rgba(0, 0, 0, 0.8)';
+        popup.style.zIndex = '1000';
+        popup.style.width = '80%';
+        popup.style.textAlign = 'center';
+        popup.style.fontFamily = "'Segoe UI', Arial, sans-serif";
+        document.body.appendChild(popup);
+    }
     </script>
 </body>
 </html>
